--- a/Lezione4/Stationboard/app/src/main/AndroidManifest.xml
+++ b/Lezione4/Stationboard/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Stationboard"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA0uSWjROobXwVBDIh1HU5AiGlSea_s-BoS" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
