--- a/Lezione4/Stationboard/gradle/libs.versions.toml
+++ b/Lezione4/Stationboard/gradle/libs.versions.toml
@@ -10,7 +10,9 @@ lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2024.04.01"
 lifecycleViewmodelCompose = "2.8.6"
+mapsCompose = "2.1.0"
 navigationCompose = "2.8.1"
+playServicesMaps = "18.0.2"
 volley = "1.2.1"
 
 [libraries]
@@ -31,6 +33,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 klaxon = { module = "com.beust:klaxon", version.ref = "klaxon" }
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
 
 [plugins]
